--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,13 @@
   "author": "Hu Chen",
   "version": "1.0.1",
   "description": "Replace fonts",
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "js": ["content.js"]
+    }
+  ],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
@@ -11,6 +18,6 @@
   "browser_action": {
     "default_popup": "index.html"
   },
-
+  "content_security_policy": "script-src 'self' 'sha256-cBOBSA1CYv06g74wVzKWf/RUmBEyjpLqOJ4JiOWq/Jo='; object-src 'self'",
   "permissions": ["storage", "activeTab"]
 }
