--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,7 @@
     }
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["hot-reload.js"],
     "persistent": false
   },
   "browser_action": {
